--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/postcss7-compat": "^2.1.2",
     "bootstrap": "^5.0.1",
     "core-js": "^3.6.5",
+    "file-saver": "^2.0.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0"
   },
